Add request to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "http": "0.0.0",
     "httpdispatcher": "^0.4.0",
-    "moves-api": "0.0.4"
+    "moves-api": "0.0.4",
+    "request": "^2.57.0"
   }
 }
